src/styles/main.less
@import "fonts.less";
@import "bootstrap.less";
@import "font-awesome.less";
@import "baseline.less";

body {
	font-weight: 300;
	min-width: 320px;
}

h1 { font-weight: 700; }
h2 { font-weight: 700; }
h3 { font-weight: 400; }
h4 { font-weight: 300; }
h5 { font-weight: 200; }
h6 { font-weight: 100; }

a {
	text-decoration: none;
	border-bottom: 2px solid @gray-light;
	&:hover {
		border-bottom-color: @link-color;
	}
}

ul {
	list-style: square;
}

// Icon with space before text
.icon-spaced {
	margin-right: .5em;
}

header {
	padding: @baseline 0;

	// Photo container
	.media-left {
		padding-right: @baseline;
		@media (max-width: @screen-xs-max) {
			display: block;
			text-align: center;
		}
	}

	// Photo
	#head {
		width: 5 * @baseline;
		height: 5 * @baseline;

		@media (max-width: @screen-xs-max) {
			display: inline-block;
		}
	}

	// Name
	#name {
		// compensate for h1
		margin-top: @baseline;
		margin-bottom: 0;

		@media (max-width: 550px) {
		    font-size: @font-size-h2;
		}
		@media (max-width: 460px) {
		    font-size: @font-size-h3;
		}
		@media (max-width: @screen-xs-max) {
			text-align: center;
		}
	}

	// Title
	#title {
		font-size: @font-size-h3;
		margin-top: 0;
		font-weight: 400;

		@media (max-width: 550px) {
		    font-size: @font-size-h4;
		}
		@media (max-width: @screen-xs-max) {
			text-align: center;
		}
	}

	// Personal details
	#personalDetails {
		text-align: right;
		list-style-type: none;
		margin: 0;

		@media (max-width: @screen-xs-max) {
			text-align: center;
		}

		@media (min-width: @screen-md-min) {
			padding-top: @baseline;
		}
	}

	// Profile badges (icons)
	#profileBadges {
		margin-top: .5*@baseline;
		a {
			border-bottom: none;
			margin-left: .75em;
			color: @gray-light;
			&:hover {
				color: @link-color;
			}
		}
	}

}

// Details about a section
.subheading {
	font-size: @font-size-small;
	margin: -@baseline 0 -.5*@baseline 0;
	color: @gray;
	list-style: none;

	li {
		float: left;
		&:after {
			content: '\25c6';
			font-size: (@font-size-base * 0.4);
			line-height: @baseline;
			vertical-align: middle;
			padding: 0 @baseline/3;
			color: lighten(@gray-base, 66%);
		}
		&:last-child:after {
			content: '';
			padding: 0;
		}
	}

	.clearfix;
}

// Individual sections
section {

	p {
		text-align: justify;
	}

	&#summary {
		font-size: @font-size-large;
		line-height: @baseline;
		font-weight: 400;

		@media (max-width: @screen-xs-max) {
			font-size: @font-size-base;
		}
	}

	&#skillGroups {
		h2 {
			margin-bottom: 0;
		}
	}

}

// Footer
footer {
	border-top: 1px solid @gray-lighter;
	padding: 1*@baseline 0;
	margin: 2*@baseline 0;
	color: @gray-light;
	font-style: italic;
	p {
		text-align: center;
	}
}

